# ChangeLog for media-libs/jpeg
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.21 2004/04/26 03:01:37 agriffis Exp $

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> jpeg-6b-r3.ebuild:
  Add die following econf for bug 48950

  22 Mar 2004; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild:
  switch to sed -i syntax, and move the replace-flags statements to src_compile

  15 Mar 2004; Stephen P. Becker <geoman@gentoo.org> jpeg-6b-r3.ebuild:
  Marked stable on mips.

  06 Mar 2004; Stephen P. Becker <geoman@gentoo.org> :
  Added ~mips keyword.

  02 Mar 2004; Tom Gall <tgall@gentoo.org> jpeg-6b-r3.ebuild:
  stable on ppc64

  17 Feb 2004; Joshua Kinard <kumba@gentoo.org> jpeg-6b-r3.ebuild:
  Added ~mips to keywords, removed arm keyword, fixed date.

  16 Nov 2003; Martin Holzer <mholzer@gentoo.org> jpeg-6b-r3.ebuild:
  adding more docs. Closes #33439

*jpeg-6b-r3 (15 Nov 2002)

  11 May 2003; Guy Martin <gmsoft@gentoo.org> jpeg-6b-r3.ebuild :
  Added use hppa && gnuconfig_update to support hppa2.0-unknown-linux-gnu targets.

  06 Apr 2003; Zach Welch <zwelch@gentoo.org> jpeg-6b-r3.ebuild:
  add arm keyword

  02 Mar 2003; Martin Holzer <mholzer@gentoo.org> jpeg-6b-r3.ebuild :
  Changing back to replace-flags.

  12 Feb 2003; Guy Martin <gmsoft@gentoo.org> jpeg-6b-r3.ebuild :
  Added hppa to keywords and replaced $chost by $CHOST.

  31 Jan 2003; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild :

  using bash isntead of replace-flags for k6 stuff Closes bug #14851 by
  Andy gorham <uncleduck@sympatico.ca>

  16 Jan 2003; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild :

  replace -march=k6-3 by -march=i586 as well. This time closes bug #13955 by
  aholler@gentoo.de (Alexander Holler)

  12 Jan 2003; Seemant Kulleen <seemant@gentoo.org> jpeg-6b-r3.ebuild :

  Replace -march=k6 and -march=k6-2 flags with -march=i586, as per bug