@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/jpeg
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.21 2004/04/26 03:01:37 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/jpeg/ChangeLog,v 1.22 2004/05/07 19:21:03 randy Exp $
+
+  07 May 2004; Michael McCabe <randy@gentoo.org> jpeg-6b-r3.ebuild:
+  Changed s390 to use gnuconfig_update so it builds
 
   25 Apr 2004; Aron Griffis <agriffis@gentoo.org> jpeg-6b-r3.ebuild:
   Add die following econf for bug 48950
